# livesplit-core

./: Cargo.toml
.github/workflows/: rust.yml
benches/: dummy_rendering.rs
capi/: Cargo.toml
capi/bind_gen/src/: typescript.ts
capi/cdylib/: Cargo.toml
capi/src/: buffer_renderer.rs  lib.rs  run_editor.rs  slideshow_component.rs  software_renderer.rs
capi/staticlib/: Cargo.toml
src/: lib.rs  xml_util.rs
src/comparison/: latest_run.rs
src/component/: key_value.rs  mod.rs  slideshow.rs
src/component/splits/: mod.rs
src/layout/: component.rs  component_settings.rs  parser.rs
src/networking/: mod.rs  speedrun_com.rs
src/platform/: mod.rs
src/platform/miri/: mod.rs
src/platform/no_std/: indexmap.rs  mod.rs  palette.rs  time.rs
src/platform/normal/: mod.rs
src/platform/wasm/: mod.rs  time.rs
src/rendering/: buffer_rendering.rs  font.rs  glyph_cache.rs  mesh.rs  mesh_rendering.rs  mod.rs  software.rs
src/rendering/component/: detailed_timer.rs  graph.rs  splits.rs  timer.rs  title.rs
src/rendering/font/: glyph_cache.rs  mod.rs
src/rendering/font/color_font/: cpal.rs
src/rendering/mesh_rendering/: mesh.rs  mod.rs
src/rendering/software/: tests.rs
src/run/: mod.rs  segment.rs
src/run/editor/: cleaning.rs  mod.rs
src/run/editor/tests/: mod.rs
src/run/parser/: livesplit.rs  shit_split.rs  time_split_tracker.rs
src/run/saver/: livesplit.rs
src/run/tests/: empty_run.rs
src/settings/image/: mod.rs
src/timing/: atomic_date_time.rs  mod.rs  time.rs  time_span.rs  time_stamp.rs
src/timing/timer/: mod.rs
tests/: balanced_pb.rs  escaped_lss.rs  layout_parsing.rs  rendering.rs  split_parsing.rs
